# picpay-simplificado

./: LICENSE  pyproject.toml
core/: settings.py
