[project]
name = "picpay-simplificado"
version = "0.1.0"
description = ""
authors = [
    {name = "henriqueetiene",email = "henriqueetienenanidesouza@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false